--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
+title: AltTabAlternative
+author: Lokesh Govindu
+email: lokeshgovindu@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 theme: jekyll-theme-hacker
+show_excerpts: true # set to false to remove excerpts on the homepage
